NetBSD Problem Report #41188

From fun@naobsd.org  Sat Apr 11 13:39:14 2009
Return-Path: <fun@naobsd.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 6BC5B63C166
	for <gnats-bugs@gnats.NetBSD.org>; Sat, 11 Apr 2009 13:39:14 +0000 (UTC)
Message-Id: <200904111339.n3BDdAkM010535@mail.naobsd.org>
Date: Sat, 11 Apr 2009 22:39:10 +0900 (JST)
From: fun@naobsd.org
Reply-To: fun@naobsd.org
To: gnats-bugs@gnats.NetBSD.org
Subject: [PATCH] AMD Family 11h cpu is not identified by cpuctl(8)
X-Send-Pr-Version: 3.95

>Number:         41188
>Category:       bin
>Synopsis:       [PATCH] AMD Family 11h cpu is not identified by cpuctl(8)
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sat Apr 11 13:40:00 +0000 2009
>Closed-Date:    Tue May 03 09:07:01 +0000 2011
>Last-Modified:  Tue May 03 09:10:02 +0000 2011
>Originator:     FUKAUMI Naoki
>Release:        NetBSD 5.0_RC3
>Organization:
	FUKAUMI Naoki
>Environment:
System: NetBSD t105.naobsd.org 5.0_RC3 NetBSD 5.0_RC3 (T105) #0: Sat Apr 11 20:54:11 JST 2009 root@t105.naobsd.org:/usr/obj/amd64/sys/arch/amd64/compile/T105 amd64
Architecture: x86_64
Machine: amd64
>Description:
	AMD Family 11h (e.g. Turion X2 Ultra) is not identified by
	cpuctl(8). below is output of "cpuctl identify 0" command.

cpu0: AMD Unknown K8 (Athlon) (686-class), 2200.92 MHz, id 0x200f31
cpu0: features 0x178bfbff<FPU,VME,DE,PSE,TSC,MSR,PAE,MCE,CX8,APIC,SEP,MTRR>
cpu0: features 0x178bfbff<PGE,MCA,CMOV,PAT,PSE36,CFLUSH,MMX>
cpu0: features 0x178bfbff<FXSR,SSE,SSE2,HTT>
cpu0: features2 0x2001<SSE3,CX16>
cpu0: features3 0xebd3fbff<SCALL/RET,NOX,MXX,FFXSR,RDTSCP,LONG,3DNOW2,3DNOW>
cpu0: features4 0x131f<LAHF,CMPLEGACY,SVM,EAPIC,ALTMOVCR0,3DNOWPREFETCH,OSVW,SKINIT>
cpu0: "AMD Turion(tm) X2 Ultra Dual-Core Mobile ZM-82"
cpu0: I-cache 64KB 64B/line 2-way, D-cache 64KB 64B/line 2-way
cpu0: L2 cache 1MB 64B/line 16-way
cpu0: ITLB 32 4KB entries fully associative, 8 4MB entries fully associative
cpu0: DTLB 32 4KB entries fully associative, 8 4MB entries fully associative
cpu0: Initial APIC ID 0
cpu0: AMD Power Management features: 0x1f9<TS,TTP,HTC,STC,100,HWP,TSC>
cpu0: family 0f model 03 extfamily 02 extmodel 00

>How-To-Repeat:
	see above.

>Fix:
Index: usr.sbin/cpuctl/arch/i386.c
===================================================================
RCS file: /home/fun/cvsroot/NetBSD/src/usr.sbin/cpuctl/arch/i386.c,v
retrieving revision 1.13.2.2
diff -u -p -r1.13.2.2 i386.c
--- usr.sbin/cpuctl/arch/i386.c	24 Mar 2009 20:34:56 -0000	1.13.2.2
+++ usr.sbin/cpuctl/arch/i386.c	11 Apr 2009 12:01:14 -0000
@@ -924,6 +924,16 @@ amd_amd64_name(struct cpu_info *ci)
 				break;
 		}
 		break;
+	case 0x02:
+		switch (model) {
+			case 0x03:
+				ret = "Family 11h";
+				break;
+			default:
+				ret = "Unknown AMD64 CPU";
+				break;
+		}
+		break;
 	}

 	return ret;

>Release-Note:

>Audit-Trail:

State-Changed-From-To: open->closed
State-Changed-By: jruoho@NetBSD.org
State-Changed-When: Tue, 03 May 2011 09:07:01 +0000
State-Changed-Why:

Fixed, thanks.



From: "Jukka Ruohonen" <jruoho@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/41188 CVS commit: src/usr.sbin/cpuctl/arch
Date: Tue, 3 May 2011 09:06:22 +0000

 Module Name:	src
 Committed By:	jruoho
 Date:		Tue May  3 09:06:22 UTC 2011

 Modified Files:
 	src/usr.sbin/cpuctl/arch: i386.c

 Log Message:
 Identify AMD Family 11h. From PR bin/41188 by FUKAUMI Naoki.


 To generate a diff of this commit:
 cvs rdiff -u -r1.24 -r1.25 src/usr.sbin/cpuctl/arch/i386.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.