Identify AMD Family 11h. From PR bin/41188 by FUKAUMI Naoki.